# test-sphinx-theme

./: conf.py  index.rst  project.mk  pyproject.toml  requirements.txt
test_sphinx_theme_theme/: __init__.py
