[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test_sphinx_theme_theme"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.entry-points."sphinx.html_themes"]
test_sphinx_theme_theme = "test_sphinx_theme_theme"

